@@ -3,6 +3,8 @@
 
 E <- exp(1)# will be used when the *.expr[d]  below are eval()ed
 
+## MM: Really should improve some of these -- they are numerically unstable for non-small |alpha|
+
 ## This file is not to be edited. It is generated by ../inst/docs/mathnb/exprPrep.R
 `frankCopula.cdf.expr` <-
 expression(-(log(E^(-(alpha * u1)))/alpha), -(log(1 + ((-1 + 
